<?xml version="1.0"?>
<package format="2">
  <name>LMB_dispnet</name>
  <version>1.0.0</version>
  <description>LMB's DispNet stereo disparity estimation CNN</description>

  <maintainer email="mayern@cs.uni-freiburg.de">Nikolaus Mayer</maintainer>

  <license>Non-commercial, for research purposes only.</license>

  <url type="website">https://lmb.informatik.uni-freiburg.de/Publications/2016/MIFDB16/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>libgoogle-glog-dev</depend>
  <depend>image_transport</depend>
  <depend>message_filters</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>

  <export>
  </export>
</package>
